--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
-{erl_first_files, ["src/uaparser_utils.erl"]}.
+{erl_first_files, ["src/uaparser_browser.erl",
+                   "src/uaparser_os.erl",
+                   "src/uaparser_utils.erl"]}.
 {deps, [
         {'parse_trans', "", {git, "https://github.com/esl/parse_trans.git", {tag, "2.8"}}}
-    ]}.
+       ]}.
